Polishing.
Mostly, refine upsert on conflict handling API.

See #493
Original pull request: #2273